@@ -18,6 +18,10 @@ Regina - A Normal Surface Theory Calculator
         Class NPerm:
             - Added operators = and != and constructor NPerm(const NPerm&).
         Class NTriangulation:
+            - Added extra condition to shellBoundary() covering two
+              boundary faces plus two identified faces.
+            - Added extra condition to twoZeroMove(NEdge*, ...) covering
+              two boundary faces plus two identified faces.
             - Added fourFourMove().
         File ndisc.h:
             - Added routine discOrientationFollowsEdge().
